--- a/extract_pictures.ipynb
+++ b/extract_pictures.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,52 +12,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "os.mkdir(\"./Dataset/\")\n",
+    "def create_folders(string):\n",
     "\n",
-    "os.mkdir(\"./Dataset/benign\")\n",
-    "os.mkdir(\"./Dataset/benign/adenosis\")\n",
-    "os.mkdir(\"./Dataset/benign/fibroadenoma\")\n",
-    "os.mkdir(\"./Dataset/benign/phyllodes_tumor\")\n",
-    "os.mkdir(\"./Dataset/benign/tubular_adenoma\")\n",
+    "    path_origin = 'D:/Medical_Imaging_Zusatz/BreaKHis_v1/'\n",
+    "    path_focus = path_origin + 'Dataset_' + string + '/'\n",
+    "    benign = 'benign'\n",
+    "    malignant = 'malignant'\n",
     "\n",
-    "os.mkdir(\"./Dataset/malignant\")\n",
-    "os.mkdir(\"./Dataset/malignant/ductal_carcinoma\")\n",
-    "os.mkdir(\"./Dataset/malignant/lobular_carcinoma\")\n",
-    "os.mkdir(\"./Dataset/malignant/mucinous_carcinoma\")\n",
-    "os.mkdir(\"./Dataset/malignant/papillary_carcinoma\")\n"
+    "    os.mkdir(path_focus)\n",
+    "\n",
+    "    path_benign = path_focus + benign + '/'\n",
+    "    path_benign_adenosis = path_benign + 'adenosis/'\n",
+    "    path_benign_fibroadenoma = path_benign+ 'fibroadenoma'\n",
+    "    path_benign_phyllodes_tumor = path_benign + 'phyllodes_tumor'\n",
+    "    path_benign_tubular_adenoma = path_benign + 'tubular_adenoma'\n",
+    "\n",
+    "    os.mkdir(path_benign)\n",
+    "    os.mkdir(path_benign_adenosis)\n",
+    "    os.mkdir(path_benign_fibroadenoma)\n",
+    "    os.mkdir(path_benign_phyllodes_tumor)\n",
+    "    os.mkdir(path_benign_tubular_adenoma)\n",
+    "\n",
+    "    path_malignant = path_focus + malignant + '/'\n",
+    "    path_malignant_ductal_carcinoma = path_malignant + 'ductal_carcinoma'\n",
+    "    path_malignant_lobular_carcinoma = path_malignant + 'lobular_carcinoma'\n",
+    "    path_malignant_mucinous_carcinoma = path_malignant + 'mucinous_carcinoma'\n",
+    "    path_malignant_papillary_carcinoma = path_malignant + 'papillary_carcinoma'\n",
+    "\n",
+    "    os.mkdir(path_malignant)\n",
+    "    os.mkdir(path_malignant_ductal_carcinoma)\n",
+    "    os.mkdir(path_malignant_lobular_carcinoma)\n",
+    "    os.mkdir(path_malignant_mucinous_carcinoma)\n",
+    "    os.mkdir(path_malignant_papillary_carcinoma)\n",
+    "\n",
+    "    return 'Folders created!'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
-    "path_benign = \"D:/Medical_Imaging_Projekt_Backup/dat/BreaKHis_v1/BreaKHis_v1/histology_slides/breast/benign/SOB/\"\n",
-    "path_malignant = \"D:/Medical_Imaging_Projekt_Backup/dat/BreaKHis_v1/BreaKHis_v1/histology_slides/breast/malignant/SOB/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_path_benign = \"C:/Users/elias/OneDrive - FH Technikum Wien/Master_Technikum_Wien/3_Semester/Spezialisierung_Medical_Imaging/Projekt/Medical_Imaging_Projekt/Dataset/benign/\"\n",
-    "target_path_malignant = \"C:/Users/elias/OneDrive - FH Technikum Wien/Master_Technikum_Wien/3_Semester/Spezialisierung_Medical_Imaging/Projekt/Medical_Imaging_Projekt/Dataset/malignant/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def getImages(origin_path, target_path):\n",
+    "def get_images(origin_path, target_path, string = '40X'):\n",
     "\n",
     "    for folder in os.listdir(origin_path):\n",
     "\n",
@@ -65,7 +66,7 @@
     "            \n",
     "            for sf in os.listdir(origin_path + folder + \"/\" + subfolder):\n",
     "\n",
-    "                if sf == \"40X\":\n",
+    "                if sf == string:\n",
     "\n",
     "                    for image in os.listdir(origin_path + folder + \"/\" + subfolder + \"/\" + sf):\n",
     "\n",
@@ -76,27 +77,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Done!'"
+       "'Folders created!'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getImages(path_benign, target_path_benign)"
+    "create_folders('40X')\n",
+    "create_folders('100X')\n",
+    "create_folders('200X')\n",
+    "create_folders('400X')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path_benign = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/benign/\"\n",
+    "path_malignant = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/malignant/\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -105,13 +119,89 @@
        "'Done!'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "getImages(path_malignant, target_path_malignant)"
+    "target_path_benign_40X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_40X/benign/\"\n",
+    "target_path_malignant_40X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_40X/malignant/\"\n",
+    "\n",
+    "get_images(path_benign, target_path_benign_40X, '40X')\n",
+    "get_images(path_malignant, target_path_malignant_40X, '40X')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done!'"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_path_benign_100X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_100X/benign/\"\n",
+    "target_path_malignant_100X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_100X/malignant/\"\n",
+    "\n",
+    "get_images(path_benign, target_path_benign_100X, '100X')\n",
+    "get_images(path_malignant, target_path_malignant_100X, '100X')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done!'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_path_benign_200X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_200X/benign/\"\n",
+    "target_path_malignant_200X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_200X/malignant/\"\n",
+    "\n",
+    "get_images(path_benign, target_path_benign_200X, '200X')\n",
+    "get_images(path_malignant, target_path_malignant_200X, '200X')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Done!'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "target_path_benign_400X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_400X/benign/\"\n",
+    "target_path_malignant_400X = \"D:/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_400X/malignant/\"\n",
+    "\n",
+    "get_images(path_benign, target_path_benign_400X, '400X')\n",
+    "get_images(path_malignant, target_path_malignant_400X, '400X')"
    ]
   }
  ],
@@ -131,7 +221,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.7 (tags/v3.8.7:6503f05, Dec 21 2020, 17:59:51) [MSC v.1928 64 bit (AMD64)]"
+   "version": "3.8.7"
   },
   "orig_nbformat": 4,
   "vscode": {
