--- a/Pipeline/Generate_Eval_GAN.ipynb
+++ b/Pipeline/Generate_Eval_GAN.ipynb
@@ -607,6 +607,11 @@
       "source": [
         "# utils.generate_sample_images(generator, generator_optimizer, checkpoint_path_benign_array[1], save_dir_benign_array[1], types_benign[1])"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
@@ -628,7 +633,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.1"
+      "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
     },
     "orig_nbformat": 4,
     "vscode": {
