--- a/ResNet_DenseNet_Model/DenseNet_Model.ipynb
+++ b/ResNet_DenseNet_Model/DenseNet_Model.ipynb
@@ -794,49 +794,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from  sklearn.metrics import precision_recall_fscore_support\n",
-    "\n",
-    "# def pandas_classification_report(y_true, y_pred):\n",
-    "    \n",
-    "#     metrics_summary = precision_recall_fscore_support(\n",
-    "#             y_true=y_true, \n",
-    "#             y_pred=y_pred)\n",
-    "    \n",
-    "#     avg = list(precision_recall_fscore_support(\n",
-    "#             y_true=y_true, \n",
-    "#             y_pred=y_pred,\n",
-    "#             average='weighted'))\n",
-    "\n",
-    "#     metrics_sum_index = ['precision', 'recall', 'f1-score', 'support']\n",
-    "#     class_report_df = pd.DataFrame(\n",
-    "#         list(metrics_summary),\n",
-    "#         index=metrics_sum_index)\n",
-    "    \n",
-    "#     support = class_report_df.loc['support']\n",
-    "#     total = support.sum() \n",
-    "#     avg[-1] = total\n",
-    "    \n",
-    "#     class_report_df['avg / total'] = avg\n",
-    "\n",
-    "#     return class_report_df.T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# df_class_report = pandas_classification_report(ya_true = np.argmax(Y_test, axis=1), y_pred = np.argmax(Y_pred_tta, axis=1))\n",
-    "# print(df_class_report)"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -943,7 +900,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
