--- a/Pipeline/Generate_Eval_GAN.ipynb
+++ b/Pipeline/Generate_Eval_GAN.ipynb
@@ -2,15 +2,299 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 28,
       "metadata": {
         "id": "-o00I0hq-wxa"
       },
       "outputs": [],
       "source": [
+        "import numpy as np # linear algebra\n",
+        "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
+        "import os\n",
+        "import cv2\n",
+        "\n",
+        "from matplotlib import pyplot as plt\n",
         "import tensorflow as tf\n",
-        "import matplotlib.pyplot as plt\n",
-        "import os"
+        "from tqdm import tqdm\n",
+        "from PIL import Image\n",
+        "from tensorflow import keras\n",
+        "from keras import Input\n",
+        "from keras.layers import Dense, Reshape, LeakyReLU, Conv2D, Conv2DTranspose, Flatten, Dropout\n",
+        "from keras.models import Model\n",
+        "from keras.optimizers import RMSprop"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "path = 'D:/Medical_Imaging/Medical_Imaging_Zusatz/BreaKHis_v1/Dataset_40X/benign/adenosis/'\n",
+        "\n",
+        "WIDTH = 128\n",
+        "HEIGHT = 128\n",
+        "\n",
+        "images = []\n",
+        "read = lambda imname: np.asarray(Image.open(imname).convert('L')) #'LA', 'L'\n",
+        "\n",
+        "for image in os.listdir(path):\n",
+        "\n",
+        "    img = read(path + \"/\" + image)\n",
+        "    # img = cv2.imread(path + folder + \"/\" + image)\n",
+        "    # img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
+        "    img = cv2.resize(img, (HEIGHT, WIDTH))\n",
+        "\n",
+        "    # täusche RGB Image an damit das fürs ResNet als input verwendet werden kann\n",
+        "    img = np.repeat(img[..., np.newaxis], 3, -1)\n",
+        "\n",
+        "    images.append(np.array(img))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 30,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "(114, 128, 128, 3)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Image shape\n",
+        "images = np.array(images) / 255\n",
+        "print(images.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 31,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "LATENT_DIM = 32\n",
+        "CHANNELS = 3\n",
+        "\n",
+        "def create_generator():\n",
+        "    \n",
+        "    gen_input = Input(shape=(LATENT_DIM, ))\n",
+        "\n",
+        "    x = Dense(128 * 16 * 16)(gen_input)\n",
+        "    x = LeakyReLU()(x)\n",
+        "    x = Reshape((16, 16, 128))(x)\n",
+        "\n",
+        "    x = Conv2D(256, 5, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2DTranspose(256, 4, strides=2, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2DTranspose(256, 4, strides=2, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2DTranspose(256, 4, strides=2, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2D(512, 5, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "    x = Conv2D(512, 5, padding='same')(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "    x = Conv2D(CHANNELS, 7, activation='tanh', padding='same')(x)\n",
+        "\n",
+        "    generator = Model(gen_input, x)\n",
+        "    return generator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 32,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def create_discriminator():\n",
+        "    disc_input = Input(shape=(HEIGHT, WIDTH, CHANNELS))\n",
+        "\n",
+        "    x = Conv2D(256, 3)(disc_input)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2D(256, 4, strides=2)(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2D(256, 4, strides=2)(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2D(256, 4, strides=2)(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Conv2D(256, 4, strides=2)(x)\n",
+        "    x = LeakyReLU()(x)\n",
+        "\n",
+        "    x = Flatten()(x)\n",
+        "    x = Dropout(0.4)(x)\n",
+        "\n",
+        "    x = Dense(1, activation='sigmoid')(x)\n",
+        "    discriminator = Model(disc_input, x)\n",
+        "\n",
+        "    optimizer = RMSprop(\n",
+        "        lr=.0001,\n",
+        "        clipvalue=1.0,\n",
+        "        decay=1e-8\n",
+        "    )\n",
+        "\n",
+        "    discriminator.compile(\n",
+        "        optimizer=optimizer,\n",
+        "        loss='binary_crossentropy'\n",
+        "    )\n",
+        "\n",
+        "    return discriminator"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "generator = create_generator()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 38,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "ValueError",
+          "evalue": "Layer count mismatch when loading weights from file. Model expected 8 layers, found 2 saved layers.",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_39916/269467918.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgenerator\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'D:/Medical_Imaging/Medical_Imaging_Zusatz/Saved_Checkpoints/gan2_40x_49999.h5'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;32mc:\\Users\\elias\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\utils\\traceback_utils.py\u001b[0m in \u001b[0;36merror_handler\u001b[1;34m(*args, **kwargs)\u001b[0m\n\u001b[0;32m     68\u001b[0m             \u001b[1;31m# To get the full stack trace, call:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     69\u001b[0m             \u001b[1;31m# `tf.debugging.disable_traceback_filtering()`\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 70\u001b[1;33m             \u001b[1;32mraise\u001b[0m \u001b[0me\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwith_traceback\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_tb\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     71\u001b[0m         \u001b[1;32mfinally\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     72\u001b[0m             \u001b[1;32mdel\u001b[0m \u001b[0mfiltered_tb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;32mc:\\Users\\elias\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\saving\\legacy\\hdf5_format.py\u001b[0m in \u001b[0;36mload_weights_from_hdf5_group\u001b[1;34m(f, model)\u001b[0m\n\u001b[0;32m    810\u001b[0m     \u001b[0mlayer_names\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfiltered_layer_names\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    811\u001b[0m     \u001b[1;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlayer_names\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfiltered_layers\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 812\u001b[1;33m         raise ValueError(\n\u001b[0m\u001b[0;32m    813\u001b[0m             \u001b[1;34m\"Layer count mismatch when loading weights from file. \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    814\u001b[0m             \u001b[1;34mf\"Model expected {len(filtered_layers)} layers, found \"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+            "\u001b[1;31mValueError\u001b[0m: Layer count mismatch when loading weights from file. Model expected 8 layers, found 2 saved layers."
+          ]
+        }
+      ],
+      "source": [
+        "generator.load_weights('D:/Medical_Imaging/Medical_Imaging_Zusatz/Saved_Checkpoints/gan2_40x_49999.h5')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "c:\\Users\\elias\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\keras\\optimizers\\optimizer_v2\\rmsprop.py:143: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  super().__init__(name, **kwargs)\n"
+          ]
+        }
+      ],
+      "source": [
+        "discriminator = create_discriminator()\n",
+        "discriminator.trainable = False"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "gan_input = Input(shape=(LATENT_DIM, ))\n",
+        "gan_output = discriminator(generator(gan_input))\n",
+        "gan = Model(gan_input, gan_output)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "optimizer = RMSprop(lr = .0001, clipvalue = 1.0, decay = 1e-8)\n",
+        "gan.compile(optimizer=optimizer, loss='binary_crossentropy')\n",
+        "\n",
+        "# gan.build(input_shape=(LATENT_DIM, ))\n",
+        "# \n",
+        "model = gan.load_weights('D:/Medical_Imaging/Medical_Imaging_Zusatz/Saved_Checkpoints/gan2_40x_49999.h5')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 24,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "iters = 15\n",
+        "batch_size = 16"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'summary'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_39916/3470139634.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msummary\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'summary'"
+          ]
+        }
+      ],
+      "source": [
+        "model.summary()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "ename": "AttributeError",
+          "evalue": "'NoneType' object has no attribute 'predict'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+            "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_39916/3189875352.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mlatent_vectors\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnormal\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msize\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mLATENT_DIM\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlatent_vectors\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'predict'"
+          ]
+        }
+      ],
+      "source": [
+        "latent_vectors = np.random.normal(size = (batch_size, LATENT_DIM))\n",
+        "model.predict(latent_vectors)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
+    },
+    {
+      "attachments": {},
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Backlog"
       ]
     },
     {
@@ -633,7 +917,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
+      "version": "3.10.1"
     },
     "orig_nbformat": 4,
     "vscode": {
