--- a/ResNet_DenseNet_Model/DenseNet_Model.ipynb
+++ b/ResNet_DenseNet_Model/DenseNet_Model.ipynb
@@ -38,21 +38,6 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "- 40X 256   - Done!\n",
-    "- 40X 64    - Done!\n",
-    "- 100X 256  - Done!\n",
-    "- 100X 64   - Done!\n",
-    "- 200X 256  - Done!\n",
-    "- 200X 64   - Done!\n",
-    "- 400X 256  - Done!\n",
-    "- 400X 64   - Done!"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
@@ -928,7 +913,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
