--- a/Pipeline/NN_Pipeline_Train_GAN.ipynb
+++ b/Pipeline/NN_Pipeline_Train_GAN.ipynb
@@ -14,34 +14,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import json\n",
-    "import math\n",
-    "import os\n",
-    "import cv2\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "import scipy\n",
-    "import tensorflow as tf\n",
-    "import gc\n",
-    "import itertools\n",
+    "# import json\n",
+    "# import math\n",
+    "# import os\n",
+    "# import cv2\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import pandas as pd\n",
+    "# import scipy\n",
+    "# import tensorflow as tf\n",
+    "# import gc\n",
+    "# import itertools\n",
     "\n",
-    "from PIL import Image\n",
-    "from functools import partial\n",
-    "from sklearn import metrics\n",
-    "from collections import Counter\n",
-    "from keras import backend as K\n",
-    "from tqdm import tqdm\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import cohen_kappa_score, accuracy_score\n",
+    "# from PIL import Image\n",
+    "# from functools import partial\n",
+    "# from sklearn import metrics\n",
+    "# from collections import Counter\n",
+    "# from keras import backend as K\n",
+    "# from tqdm import tqdm\n",
+    "# from sklearn.model_selection import train_test_split\n",
+    "# from sklearn.metrics import cohen_kappa_score, accuracy_score\n",
     "\n",
-    "from keras import layers\n",
-    "from keras.applications import ResNet50, MobileNet, DenseNet201, InceptionV3, NASNetLarge, InceptionResNetV2, NASNetMobile\n",
-    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
-    "from keras.preprocessing.image import ImageDataGenerator\n",
-    "from keras.utils.np_utils import to_categorical\n",
-    "from keras.models import Sequential\n",
-    "from keras.optimizers import Adam"
+    "# from keras import layers\n",
+    "# from keras.applications import ResNet50, MobileNet, DenseNet201, InceptionV3, NASNetLarge, InceptionResNetV2, NASNetMobile\n",
+    "# from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
+    "# from keras.preprocessing.image import ImageDataGenerator\n",
+    "# from keras.utils.np_utils import to_categorical\n",
+    "# from keras.models import Sequential\n",
+    "# from keras.optimizers import Adam"
    ]
   },
   {
@@ -54,10 +54,12 @@
     "import json\n",
     "import utils_nn_eval\n",
     "import gc\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from keras import backend as K\n",
-    "\n",
-    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard"
+    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
+    "from sklearn.metrics import cohen_kappa_score, accuracy_score"
    ]
   },
   {
@@ -665,6 +667,7 @@
    "source": [
     "from sklearn.metrics import roc_auc_score, auc\n",
     "from sklearn.metrics import roc_curve\n",
+    "\n",
     "roc_log = roc_auc_score(np.argmax(gt_Y_test, axis=1), np.argmax(Y_pred_tta, axis=1))\n",
     "false_positive_rate, true_positive_rate, threshold = roc_curve(np.argmax(gt_Y_test, axis=1), np.argmax(Y_pred_tta, axis=1))\n",
     "area_under_curve = auc(false_positive_rate, true_positive_rate)\n",
@@ -751,151 +754,6 @@
     "    \n",
     "plt.show()"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Backlog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_all_images(path, cancer_type, resize_param):\n",
-    "\n",
-    "    images = []\n",
-    "    read = lambda imname: np.asarray(Image.open(imname).convert('L')) #'LA', 'L'\n",
-    "\n",
-    "    for image in os.listdir(path + cancer_type):\n",
-    "\n",
-    "        img = read(path + cancer_type + \"/\" + image)\n",
-    "        # img = cv2.imread(path + folder + \"/\" + image)\n",
-    "        # img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "        img = cv2.resize(img, (resize_param, resize_param))\n",
-    "\n",
-    "        # täusche RGB Image an damit das fürs ResNet als input verwendet werden kann\n",
-    "        img = np.repeat(img[..., np.newaxis], 3, -1)\n",
-    "\n",
-    "        images.append(np.array(img))\n",
-    "\n",
-    "    return np.array(images)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gan_benign_adenosis = get_all_images(gan_benign_path, \"adenosis\", image_size)\n",
-    "gan_benign_fibroadenoma = get_all_images(gan_benign_path, \"fibroadenoma\", image_size)\n",
-    "gan_benign_phyllodes_tumor = get_all_images(gan_benign_path, \"phyllodes_tumor\", image_size)\n",
-    "gan_benign_tubular_adenoma = get_all_images(gan_benign_path, \"tubular_adenoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'gan_malignant_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_34428/1578231831.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgan_malignant_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mgan_malignant_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gan_malignant_' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "gan_malignant_ductal_carcinoma = get_all_images(gan_malignant_path, \"ductal_carcinoma\", image_size)\n",
-    "gan_malignant_lobular_carcinoma = get_all_images(gan_malignant_path, \"lobular_carcinoma\", image_size)\n",
-    "gan_malignant_mucinous_carcinoma = get_all_images(gan_malignant_path, \"mucinous_carcinoma\", image_size)\n",
-    "gan_malignant_papillary_carcinoma = get_all_images(gan_malignant_path, \"papillary_carcinoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(gan_benign_adenosis))\n",
-    "print(len(gan_benign_fibroadenoma))\n",
-    "print(len(gan_benign_phyllodes_tumor))\n",
-    "print(len(gan_benign_tubular_adenoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(gan_malignant_ductal_carcinoma))\n",
-    "print(len(gan_malignant_lobular_carcinoma))\n",
-    "print(len(gan_malignant_mucinous_carcinoma))\n",
-    "print(len(gan_malignant_papillary_carcinoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gt_benign_adenosis = get_all_images(gt_benign_path, \"adenosis\", image_size)\n",
-    "# gt_benign_fibroadenoma = get_all_images(gt_benign_path, \"fibroadenoma\", image_size)\n",
-    "# gt_benign_phyllodes_tumor = get_all_images(gt_benign_path, \"phyllodes_tumor\", image_size)\n",
-    "# gt_benign_tubular_adenoma = get_all_images(gt_benign_path, \"tubular_adenoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gt_malignant_ductal_carcinoma = get_all_images(gt_malignant_path, \"ductal_carcinoma\", image_size)\n",
-    "# gt_malignant_lobular_carcinoma = get_all_images(gt_malignant_path, \"lobular_carcinoma\", image_size)\n",
-    "# gt_malignant_mucinous_carcinoma = get_all_images(gt_malignant_path, \"mucinous_carcinoma\", image_size)\n",
-    "# gt_malignant_papillary_carcinoma = get_all_images(gt_malignant_path, \"papillary_carcinoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(len(gt_benign_adenosis))\n",
-    "# print(len(gt_benign_fibroadenoma))\n",
-    "# print(len(gt_benign_phyllodes_tumor))\n",
-    "# print(len(gt_benign_tubular_adenoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(len(gt_malignant_ductal_carcinoma))\n",
-    "# print(len(gt_malignant_lobular_carcinoma))\n",
-    "# print(len(gt_malignant_mucinous_carcinoma))\n",
-    "# print(len(gt_malignant_papillary_carcinoma))"
-   ]
   }
  ],
  "metadata": {
@@ -914,7 +772,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.10.1 (tags/v3.10.1:2cd268a, Dec  6 2021, 19:10:37) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
