--- a/Pipeline/NN_Pipeline_Train_GT.ipynb
+++ b/Pipeline/NN_Pipeline_Train_GT.ipynb
@@ -54,9 +54,12 @@
     "import json\n",
     "import utils_nn_eval\n",
     "import gc\n",
+    "import matplotlib.pyplot as plt\n",
+    "from tqdm import tqdm\n",
     "\n",
     "from keras import backend as K\n",
-    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard"
+    "from keras.callbacks import Callback, ModelCheckpoint, ReduceLROnPlateau, TensorBoard\n",
+    "from sklearn.metrics import cohen_kappa_score, accuracy_score"
    ]
   },
   {
@@ -761,151 +764,6 @@
     "    plt.imshow(gan_X_test[prop_class[i]], interpolation='nearest')\n",
     "    \n",
     "plt.show()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Backlog"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_all_images(path, cancer_type, resize_param):\n",
-    "\n",
-    "    images = []\n",
-    "    read = lambda imname: np.asarray(Image.open(imname).convert('L')) #'LA', 'L'\n",
-    "\n",
-    "    for image in os.listdir(path + cancer_type):\n",
-    "\n",
-    "        img = read(path + cancer_type + \"/\" + image)\n",
-    "        # img = cv2.imread(path + folder + \"/\" + image)\n",
-    "        # img = cv2.cvtColor(img, cv2.COLOR_BGR2GRAY)\n",
-    "        img = cv2.resize(img, (resize_param, resize_param))\n",
-    "\n",
-    "        # täusche RGB Image an damit das fürs ResNet als input verwendet werden kann\n",
-    "        img = np.repeat(img[..., np.newaxis], 3, -1)\n",
-    "\n",
-    "        images.append(np.array(img))\n",
-    "\n",
-    "    return np.array(images)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "gan_benign_adenosis = get_all_images(gan_benign_path, \"adenosis\", image_size)\n",
-    "gan_benign_fibroadenoma = get_all_images(gan_benign_path, \"fibroadenoma\", image_size)\n",
-    "gan_benign_phyllodes_tumor = get_all_images(gan_benign_path, \"phyllodes_tumor\", image_size)\n",
-    "gan_benign_tubular_adenoma = get_all_images(gan_benign_path, \"tubular_adenoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'gan_malignant_' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_34428/1578231831.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n",
-      "\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgan_malignant_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mgan_malignant_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'gan_malignant_' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "gan_malignant_ductal_carcinoma = get_all_images(gan_malignant_path, \"ductal_carcinoma\", image_size)\n",
-    "gan_malignant_lobular_carcinoma = get_all_images(gan_malignant_path, \"lobular_carcinoma\", image_size)\n",
-    "gan_malignant_mucinous_carcinoma = get_all_images(gan_malignant_path, \"mucinous_carcinoma\", image_size)\n",
-    "gan_malignant_papillary_carcinoma = get_all_images(gan_malignant_path, \"papillary_carcinoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(gan_benign_adenosis))\n",
-    "print(len(gan_benign_fibroadenoma))\n",
-    "print(len(gan_benign_phyllodes_tumor))\n",
-    "print(len(gan_benign_tubular_adenoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(len(gan_malignant_ductal_carcinoma))\n",
-    "print(len(gan_malignant_lobular_carcinoma))\n",
-    "print(len(gan_malignant_mucinous_carcinoma))\n",
-    "print(len(gan_malignant_papillary_carcinoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gt_benign_adenosis = get_all_images(gt_benign_path, \"adenosis\", image_size)\n",
-    "# gt_benign_fibroadenoma = get_all_images(gt_benign_path, \"fibroadenoma\", image_size)\n",
-    "# gt_benign_phyllodes_tumor = get_all_images(gt_benign_path, \"phyllodes_tumor\", image_size)\n",
-    "# gt_benign_tubular_adenoma = get_all_images(gt_benign_path, \"tubular_adenoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# gt_malignant_ductal_carcinoma = get_all_images(gt_malignant_path, \"ductal_carcinoma\", image_size)\n",
-    "# gt_malignant_lobular_carcinoma = get_all_images(gt_malignant_path, \"lobular_carcinoma\", image_size)\n",
-    "# gt_malignant_mucinous_carcinoma = get_all_images(gt_malignant_path, \"mucinous_carcinoma\", image_size)\n",
-    "# gt_malignant_papillary_carcinoma = get_all_images(gt_malignant_path, \"papillary_carcinoma\", image_size)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(len(gt_benign_adenosis))\n",
-    "# print(len(gt_benign_fibroadenoma))\n",
-    "# print(len(gt_benign_phyllodes_tumor))\n",
-    "# print(len(gt_benign_tubular_adenoma))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(len(gt_malignant_ductal_carcinoma))\n",
-    "# print(len(gt_malignant_lobular_carcinoma))\n",
-    "# print(len(gt_malignant_mucinous_carcinoma))\n",
-    "# print(len(gt_malignant_papillary_carcinoma))"
    ]
   }
  ],
