--- a/ResNet_DenseNet_Model/DenseNet_Model copy.ipynb
+++ b/ResNet_DenseNet_Model/DenseNet_Model copy.ipynb
@@ -367,7 +367,27 @@
     "        metrics = ['accuracy']\n",
     "    )\n",
     "    \n",
-    "    return model"
+    "    return model\n",
+    "\n",
+    "K.clear_session()\n",
+    "gc.collect()\n",
+    "\n",
+    "if ORIGIN_SHAPE:\n",
+    "\n",
+    "    shape = (460, 700, 3)\n",
+    "\n",
+    "else:\n",
+    "\n",
+    "    shape = (INPUT_SHAPE, INPUT_SHAPE, 3)\n",
+    "\n",
+    "resnet = DenseNet201(\n",
+    "                        weights = 'imagenet',\n",
+    "                        include_top = False,\n",
+    "                        input_shape = shape\n",
+    "                    )\n",
+    "\n",
+    "model = build_model(resnet , lr = 1e-4)\n",
+    "model.summary()"
    ]
   },
   {
