--- a/ResNet_DenseNet_Model/Densenet_New/densenet_gan.ipynb
+++ b/ResNet_DenseNet_Model/Densenet_New/densenet_gan.ipynb
@@ -302,7 +302,7 @@
     "                                  verbose=1,factor=0.2, min_lr=1e-7)\n",
     "\n",
     "# Checkpoint\n",
-    "filepath = \"densenet_new_local.hdf5\"\n",
+    "filepath = \"densenet_gan_local.hdf5\"\n",
     "checkpoint = ModelCheckpoint(filepath, monitor='val_accuracy', verbose=1, save_best_only=True, mode='max')"
    ]
   },
