Folder update GANs

--- a/Pipeline/gan_architecture_3/GAN_architecture_3.ipynb
+++ b/Pipeline/gan_architecture_3/GAN_architecture_3.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Source:\n",
+    "- https://www.kaggle.com/code/sayakdasgupta/fake-faces-with-dcgans "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
